Added documentatin access into /api/documentation
